--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -26,6 +26,21 @@
   z-index: 1000;
 }
 
+.hidden {
+  position: fixed;
+  top: -150px;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.6s ease-in-out;
+  padding: 3.5px 45px;
+  background-color: #4f6cff79;
+  backdrop-filter: blur(3px);
+  z-index: 1000;
+}
+
 .logo {
   position: relative;
   font-weight: 600;
