--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -9,6 +9,7 @@
   transition: 0.6s;
   padding: 5px 55px;
   z-index: 1000;
+  padding-top: 10px;
 }
 
 .sticky {
@@ -24,6 +25,7 @@
   background-color: #4f6cff79;
   backdrop-filter: blur(3px);
   z-index: 1000;
+  padding-top: 10px;
 }
 
 .hidden {
@@ -39,18 +41,25 @@
   background-color: #4f6cff79;
   backdrop-filter: blur(3px);
   z-index: 1000;
+  padding-top: 10px;
 }
 
 .logo {
   position: relative;
   font-weight: 600;
-  color: #4f6dff;
+  color: #6f41ff;
   text-decoration: none;
   font-size: 1.7em;
   text-transform: uppercase;
   letter-spacing: 2px;
   transition: 0.6s;
   cursor: pointer;
+  display: flex;
+}
+
+.logo span {
+  margin-left: 10px;
+  padding-top: 5px;
 }
 
 .list {
@@ -74,6 +83,21 @@
   letter-spacing: 2px;
   font-weight: 500;
   transition: 0.6s;
+}
+
+.list li a:after {
+  content: "";
+  position: absolute;
+  background-color: #3e84ff;
+  height: 3px;
+  width: 0;
+  left: 0;
+  bottom: -10px;
+  transition: 0.3s;
+}
+
+.list li a:hover:after {
+  width: 100%;
 }
 
 .sticky .logo,
