--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -105,3 +105,12 @@
 
   clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
 }
+
+@media screen and (min-width: 1024px) {
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+}
+
+@media screen and (max-width: 767px) {
+}
