--- a/src/components/About/about.module.css
+++ b/src/components/About/about.module.css
@@ -1,3 +1,47 @@
 .main {
-  background-image: url(../../../public/blurry_gradient_2_2.svg);
+  /* background-image: url(../../../public/blurry_gradient_2_2.svg);*/
+  background-color: #6f41ff;
+  background-image: radial-gradient(
+      at 47% 33%,
+      hsl(194.87, 100%, 53%) 0,
+      transparent 59%
+    ),
+    radial-gradient(at 82% 65%, hsl(218.24, 100%, 62%) 0, transparent 55%);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  color: whitesmoke;
+}
+/*
+.back {
+  background-color: #6f41ff;
+  background-image: radial-gradient(
+      at 47% 33%,
+      hsl(194.87, 100%, 53%) 0,
+      transparent 59%
+    ),
+    radial-gradient(at 82% 65%, hsl(218.24, 100%, 62%) 0, transparent 55%);
+  padding: 50px;
+}
+*/
+.card {
+  backdrop-filter: blur(15px) saturate(200%);
+  -webkit-backdrop-filter: blur(15px) saturate(200%);
+  background-color: rgba(17, 25, 40, 0.6);
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+  width: 950px;
+  height: 580px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: stretch;
+}
+
+.card article {
+  width: 150px;
 }
