--- a/src/components/About/about.module.css
+++ b/src/components/About/about.module.css
@@ -1,12 +1,12 @@
 .main {
   /* background-image: url(../../../public/blurry_gradient_2_2.svg);*/
-  background-color: #6f41ff;
+  /* background-color: #6f41ff;
   background-image: radial-gradient(
       at 47% 33%,
       hsl(194.87, 100%, 53%) 0,
       transparent 59%
     ),
-    radial-gradient(at 82% 65%, hsl(218.24, 100%, 62%) 0, transparent 55%);
+    radial-gradient(at 82% 65%, hsl(218.24, 100%, 62%) 0, transparent 55%);*/
 
   display: flex;
   justify-content: center;
@@ -14,6 +14,7 @@
   min-height: 100vh;
   color: whitesmoke;
   border-top: #6f41ff solid 4px;
+  
 }
 /*
 .back {
