--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -3,7 +3,7 @@
   height: 100vh;
   overflow: hidden;
 }
-
+/*
 .alejoback::before {
   content: "";
   position: absolute;
@@ -13,7 +13,7 @@
   bottom: 0;
   background-image: url(../../../public/blurry_gradient_1.svg);
 }
-
+*/
 .container {
   display: flex;
   align-items: center;
