--- a/src/components/Proyects/proyects.module.css
+++ b/src/components/Proyects/proyects.module.css
@@ -73,7 +73,7 @@ div.active {
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  background-color: #85a8c56c;
+  /*background-color: #85a8c56c;*/
 }
 
 .carousel {
