--- a/src/components/Stack/stack.module.css
+++ b/src/components/Stack/stack.module.css
@@ -1,5 +1,5 @@
 .container {
-  min-height: 100vh;
+  min-height: 70vh;
   padding-left: 35px;
   padding-right: 35px;
 }
@@ -10,6 +10,7 @@
   font-size: 40px;
   letter-spacing: 6px;
   font-weight: 100;
+  padding-top: 20px;
 }
 
 .container ul {
@@ -27,12 +28,14 @@
   margin: 1.5vw;
   font-size: 1.4vw;
   transition: 0.5s;
-  border-radius: 28px;
+  border-radius: 20px;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 8vw;
+  width: 6vw;
 }
 
 .container ul li a {
@@ -56,6 +59,7 @@
 .container ul li div svg {
   width: 100%;
   height: auto;
+  margin-top: 1px;
 }
 /*
 .container ul li:nth-child(1) {
