--- a/src/components/Stack/stack.module.css
+++ b/src/components/Stack/stack.module.css
@@ -1,7 +1,7 @@
 .container {
   min-height: 70vh;
-  padding-left: 35px;
-  padding-right: 35px;
+  padding-left: 18vh;
+  padding-right: 18vh;
 }
 
 .container h2 {
