--- a/src/components/Carousel/carousel.module.css
+++ b/src/components/Carousel/carousel.module.css
@@ -1,13 +1,24 @@
 .carousel_item {
-  display: inline-flex;
+  position: relative;
+  display: inline-block;
+  text-align: center;
   align-items: center;
   justify-content: center;
-  height: 75vh;
+
   background-color: #fff;
 }
 
+.texto {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .carousel_img {
-  width: 250px;
+  width: 100%;
+  height: auto;
+  object-fit: contain;
   padding: 0 20px 0 20px;
 }
 
