--- a/src/components/Carousel/carousel.module.css
+++ b/src/components/Carousel/carousel.module.css
@@ -6,6 +6,7 @@
   justify-content: center;
 
   background-color: #fff;
+  transition: 0.3s ease-in-out;
 }
 
 .texto {
@@ -13,19 +14,48 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  background: linear-gradient(rgba(5, 7, 12, 0.75), rgba(5, 7, 12, 0.75));
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  transition: 0.3s;
+  text-align: left;
+  padding-left: 12%;
+  padding-top: 12%;
 }
 
 .carousel_img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: contain;
-  padding: 0 20px 0 20px;
+}
+
+.texto:hover {
+  opacity: 0;
+  transition: 0.3s;
 }
 
 .carousel_item_text {
-  font-size: 1.15rem;
+  font-size: 1.35rem;
+  font-weight: 200;
   margin: 40px 0 40px 0;
   padding: 0 20px 0 20px;
   white-space: normal;
-  color: #617d98;
+  color: whitesmoke;
+}
+
+.texto h3 {
+  font-size: 2rem;
+  font-weight: 300;
+}
+
+.carousel_item ul {
+  display: flex;
+}
+.carousel_item ul li {
+  margin-top: 5px;
+  margin-left: 8px;
+  padding: 0 8px 0 8px;
+  border: 1px solid black;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
