--- a/src/components/Carousel/carousel.module.css
+++ b/src/components/Carousel/carousel.module.css
@@ -20,8 +20,12 @@
   opacity: 1;
   transition: 0.3s;
   text-align: left;
-  padding-left: 12%;
-  padding-top: 12%;
+  padding: 10%;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-content: center;
+  margin-left: 10px;
 }
 
 .carousel_img {
@@ -38,7 +42,7 @@
 .carousel_item_text {
   font-size: 1.35rem;
   font-weight: 200;
-  margin: 40px 0 40px 0;
+  margin: 40px 0 20px 10px;
   padding: 0 20px 0 20px;
   white-space: normal;
   color: whitesmoke;
@@ -47,6 +51,12 @@
 .texto h3 {
   font-size: 2rem;
   font-weight: 300;
+  background-color: #282828c0;
+}
+
+.texto div {
+  background-color: #282828c0;
+  text-align: justify;
 }
 
 .carousel_item ul {
