--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -81,6 +81,7 @@
   text-decoration: none;
   color: #6f41ff;
   cursor: pointer;
+  font-size: 1.05rem;
   letter-spacing: 2px;
   font-weight: 500;
   transition: 0.6s;
@@ -149,4 +150,35 @@
 .switch:checked:before {
   transform: translateX(100%);
   border-color: rgba(32, 151, 243, 1);
+}
+
+.checkbtn {
+  font-size: 30px;
+  color: whitesmoke;
+  order: 4;
+  cursor: pointer;
+  display: none;
+}
+
+.check {
+  display: none;
+}
+
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+  .list li a {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .checkbtn {
+    display: block;
+  }
+
+  .list {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #2828288e;
+  }
 }
