--- a/src/components/Stack/stack.module.css
+++ b/src/components/Stack/stack.module.css
@@ -7,7 +7,7 @@
 .container h2 {
   text-align: center;
   color: whitesmoke;
-  font-size: 40px;
+  font-size: clamp(16px, 20px, 40px);
   letter-spacing: 6px;
   font-weight: 100;
   padding-top: 20px;
