--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -64,35 +64,6 @@
   display: block;
   animation: animateWords 8s infinite ease;
 }
-/*
-.image {
-  width: 400px;
-  height: 550px;
-}
-
-.img {
-  position: relative;
-  width: 800px;
-  height: 600px;
-  background-size: cover;
-  background-image: url("../../../public/ultimamancha.png");
-}
-
-.img:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("../../../public/fotocuadrada.jpg");
-
-  background-size: cover;
-  background-position: center;
-  mix-blend-mode: screen;
-}
-*/
-/* styles.module.css */
 
 .imgcontainer {
   width: 100vh;
@@ -113,4 +84,24 @@
 }
 
 @media screen and (max-width: 767px) {
+  .container {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    color: white;
+    padding-left: 0px;
+  }
+
+  .imgcontainer {
+    width: 100%;
+    right: 0;
+  }
+
+  .h1 {
+    font-size: 1.5em;
+  }
 }
