--- a/src/components/Stack/stack.module.css
+++ b/src/components/Stack/stack.module.css
@@ -78,3 +78,14 @@
     padding-right: 10vh;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .container h2 {
+    text-align: center;
+    color: whitesmoke;
+    font-size: clamp(16px, 40px, 40px);
+    letter-spacing: 0.5px;
+    font-weight: 100;
+    padding-top: 20px;
+  }
+}
