--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -2,11 +2,17 @@
   width: 350px;
   margin: 10px;
   border: 1px solid black;
+  border-radius: 12px;
   color: whitesmoke;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2);
 }
 
 .thumbnail {
   flex: 1 1 200px;
+}
+
+.thumbnail img {
+  border-radius: 12px;
 }
 
 .content {
