--- a/src/components/Stack/stack.module.css
+++ b/src/components/Stack/stack.module.css
@@ -80,6 +80,12 @@
 }
 
 @media screen and (max-width: 767px) {
+  .container {
+    padding-left: 5vh;
+    padding-right: 5vh;
+    min-height: 40vh;
+  }
+
   .container h2 {
     text-align: center;
     color: whitesmoke;
