--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -65,3 +65,29 @@
     margin-right: 5px;
   }
 }
+@media screen and (max-width: 767px) {
+  .container {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  .container h4 {
+    font-size: 25px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .link {
+    font-size: 14px;
+    letter-spacing: 2px;
+  }
+  .email {
+    font-size: 12px;
+    margin-left: 1em;
+  }
+
+  .link svg {
+    width: 25px;
+    height: 25px;
+  }
+}
