--- a/src/components/Education/education.module.css
+++ b/src/components/Education/education.module.css
@@ -22,7 +22,7 @@
   margin-top: 60px;
   width: 75%;
   color: whitesmoke;
-  font-size: 30px;
+  font-size: clamp(20px, 30px, 30px);
   letter-spacing: 3px;
   font-weight: 100;
 }
@@ -51,7 +51,7 @@
 
 .secundarios p {
   margin-left: 1.5%;
-  font-size: 25px;
+  font-size: clamp(10px, 25px, 25px);
   letter-spacing: 3px;
   font-weight: 100;
 }
@@ -68,4 +68,19 @@
 }
 
 @media screen and (max-width: 767px) {
+  .container {
+    margin-top: 35px;
+  }
+
+  .subcontainer {
+    width: 85%;
+  }
+  .secundarios p {
+    font-size: 20px;
+    letter-spacing: 2px;
+  }
+
+  .secundarios summary {
+    font-size: 22px;
+  }
 }
