--- a/src/components/Proyects/proyects.module.css
+++ b/src/components/Proyects/proyects.module.css
@@ -92,6 +92,12 @@
   justify-content: space-evenly;
 }
 
+@media screen and (max-width: 1280px) {
+  .all {
+    height: auto;
+  }
+}
+
 @media screen and (min-width: 767px) and (max-width: 1024px) {
   .all {
     height: auto;
