--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -59,6 +59,27 @@
   scale: 1.1;
 }
 
+@keyframes show {
+  from {
+    opacity: 0;
+    scale: 25%;
+  }
+  to {
+    opacity: 1;
+    scale: 100%;
+  }
+}
+
+.card {
+  view-timeline-name: --card;
+  view-timeline-axis: block;
+  animation-timeline: --card;
+  animation-name: show;
+
+  animation-range: entry 20% cover 30%;
+  animation-fill-mode: both;
+}
+
 @media screen and (min-width: 767px) and (max-width: 1024px) {
   .container h4 {
     margin-left: 5px;
