--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,20 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+
+body::-webkit-scrollbar {
+  width: 16px;
+}
+
+body::-webkit-scrollbar-thumb {
+  height: 56px;
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: hsl(0, 0%, 67%);
+}
+
+body::-webkit-scrollbar-track {
+  border: none;
+  background-color: #282828;
+}
