--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -63,7 +63,24 @@
 .mainImage {
   height: 75%;
   object-fit: cover;
-  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+  border-radius: 60% 40% 40% 60% / 60% 40% 60% 40%;
+  overflow: hidden;
+  animation: flow 4s infinite ease-in-out;
+}
+
+@keyframes flow {
+  0% {
+    border-radius: 60% 40% 40% 60% / 60% 40% 60% 40%;
+  }
+  35% {
+    border-radius: 80% 70% 60% 60% / 80% 70% 60% 60%;
+  }
+  70% {
+    border-radius: 70% 90% 60% 70% / 80% 90% 50% 90%;
+  }
+  100% {
+    border-radius: 60% 40% 40% 60% / 60% 40% 60% 40%;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
