--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -79,7 +79,7 @@
   position: relative;
   margin: 0 20px;
   text-decoration: none;
-  color: #6f41ff;
+  color: #ffff;
   cursor: pointer;
   font-size: 1.05rem;
   letter-spacing: 2px;
