--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -10,18 +10,19 @@
 
 .container h2 {
   text-align: center;
-  color: whitesmoke;
+  color: darkslategray;
+
   font-size: 40px;
-  letter-spacing: 6px;
-  font-weight: 100;
+  letter-spacing: 4px;
+  font-weight: 400;
 }
 
 .container h4 {
   text-align: center;
-  color: whitesmoke;
+  color: #282828;
   font-size: 30px;
-  letter-spacing: 2.5px;
-  font-weight: 100;
+  letter-spacing: 2px;
+  font-weight: 400;
   margin-left: 60px;
   margin-right: 60px;
 }
@@ -43,9 +44,9 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-
+  font-weight: 400;
   padding: 15px 25px 15px 25px;
-  color: whitesmoke;
+  color: #282828;
   font-size: 25px;
   letter-spacing: 2px;
 }
@@ -57,6 +58,8 @@
 
 .link h5:hover {
   scale: 1.1;
+  text-shadow: 1px 1px 1px rgba(150, 150, 150, 0.5),
+    2px 2px 2px rgba(160, 160, 160, 0.4), 3px 3px 3px rgba(160, 160, 160, 0.1);
 }
 
 @keyframes show {
