--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -23,6 +23,7 @@
   transition: 0.6s ease-in-out;
   padding: 3.5px 45px;
   background-color: #4f6cff79;
+  background-color: #7aa1d279;
   backdrop-filter: blur(3px);
   z-index: 1000;
   padding-top: 10px;
@@ -91,7 +92,7 @@
 .list li a:after {
   content: "";
   position: absolute;
-  background-color: #3e84ff;
+  background-color: #cc95c0;
   height: 3px;
   width: 0;
   left: 0;
