--- a/src/components/Stack/stack.module.css
+++ b/src/components/Stack/stack.module.css
@@ -2,14 +2,18 @@
   min-height: 70vh;
   padding-left: 18vh;
   padding-right: 18vh;
+  border-top: #cc95c070 solid 4px;
+  border-bottom: #cc95c070 solid 4px;
 }
 
 .container h2 {
   text-align: center;
-  color: whitesmoke;
+  color: darkslategray;
+  /*text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5), 2px 2px 2px rgba(0, 0, 0, 0.4),
+    3px 3px 3px rgba(0, 0, 0, 0.1);*/
   font-size: clamp(16px, 40px, 40px);
-  letter-spacing: 6px;
-  font-weight: 100;
+  letter-spacing: 4px;
+  font-weight: 400;
   padding-top: 20px;
 }
 
@@ -89,9 +93,10 @@
   .container h2 {
     text-align: center;
     color: whitesmoke;
+    color: darkslategray;
     font-size: clamp(16px, 40px, 40px);
     letter-spacing: 0.5px;
-    font-weight: 100;
+    font-weight: 400;
     padding-top: 20px;
   }
 }
