--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -15,6 +15,11 @@
   border-radius: 12px;
 }
 
+.loader {
+  text-align: center;
+  padding: 25px;
+}
+
 .content {
   flex: 2 1 300px;
   padding: 10px;
