--- a/src/components/Proyects/proyects.module.css
+++ b/src/components/Proyects/proyects.module.css
@@ -76,7 +76,7 @@
 
 .indicator_symbol_active {
   color: gray;
-  font-size: large;
+  font-size: x-large;
 }
 /*display: flex;
   flex-direction: row;
