--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -45,7 +45,7 @@
   justify-content: flex-start;
   font-weight: 400;
   padding: 15px 25px 15px 25px;
-  color: #282828;
+  color: black;
   font-size: 25px;
   letter-spacing: 2px;
 }
@@ -61,25 +61,29 @@
     2px 2px 2px rgba(160, 160, 160, 0.4), 3px 3px 3px rgba(160, 160, 160, 0.1);
 }
 
-@keyframes show {
-  from {
-    opacity: 0;
-    scale: 25%;
-  }
-  to {
-    opacity: 1;
-    scale: 100%;
-  }
+.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1s;
 }
 
-.card {
-  view-timeline-name: --card;
-  view-timeline-axis: block;
-  animation-timeline: --card;
-  animation-name: show;
+.animatedCard {
+  animation-duration: 1s;
+  animation-name: animatedCard;
+}
 
-  animation-range: entry 20% cover 30%;
-  animation-fill-mode: both;
+@keyframes animatedCard {
+  0% {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+  }
 }
 
 @media screen and (min-width: 767px) and (max-width: 1024px) {
@@ -102,8 +106,12 @@
 
   .link {
     font-size: 14px;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
   }
+  .link h5 {
+    font-weight: 500;
+  }
+
   .email {
     font-size: 12px;
     margin-left: 1em;
