--- a/src/components/Education/customSummary/customsummary.module.css
+++ b/src/components/Education/customSummary/customsummary.module.css
@@ -6,6 +6,12 @@
 .slideOut {
   animation: spinOut 0.25s ease-out;
 }
+/*
+.svgcontainer {
+  min-width: 10px;
+  min-height: 10px;
+  display: inline-block;
+}*/
 
 @keyframes spin {
   0% {
@@ -22,5 +28,11 @@
   }
   100% {
     transform: rotate(0deg);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .summary {
+    font-size: 22px;
   }
 }
