--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,13 +1,6 @@
 .footer {
   min-height: 10vh;
   margin-top: 35px;
-  /*background-color: #111927;
-  background-image: radial-gradient(
-      at 47% 33%,
-      hsl(194.87, 100%, 53%) 0,
-      transparent 59%
-    ),
-    radial-gradient(at 82% 65%, hsl(254.53, 100%, 63%) 0, transparent 55%);*/
   border-top: 3px ridge #dbd4b470;
   margin-left: 35px;
   margin-right: 35px;
@@ -17,8 +10,18 @@
   color: whitesmoke;
   font-size: 15px;
   letter-spacing: 1.5px;
+  padding: 10px;
 }
 .alejo {
   font-size: 16px;
   letter-spacing: 1.6px;
+}
+
+@media screen and (max-width: 425px) {
+  .footer {
+    font-size: 12px;
+  }
+  .alejo {
+    font-size: 13px;
+  }
 }
