--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -1,6 +1,7 @@
 .container {
-  width: 350px;
-  margin: 10px;
+  /*width: 350px;*/
+  width: 30vh;
+  margin: 10px 4px 10px 4px;
   border: 1px solid black;
   border-radius: 12px;
   color: whitesmoke;
