--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -39,6 +39,12 @@
   padding: 15px;
 }
 
+.btncontainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .link {
   display: flex;
   flex-direction: row;
