--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -44,6 +44,17 @@
   pointer-events: none;
 }
 
+.home {
+  position: relative;
+}
+
+.positionbtn {
+  position: absolute;
+  z-index: 1600;
+  bottom: 40px;
+  left: 5vw;
+}
+
 @media screen and (min-width: 767px) and (max-width: 1024px) {
   .all,
   .allblack {
