--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -27,6 +27,19 @@
   margin-top: 15px;
 }
 
+.content details summary {
+  box-sizing: border-box;
+  padding: 15px 0px 15px 0px;
+  cursor: pointer;
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+.content details summary svg {
+  margin-right: 4px;
+}
+
 .content h5 {
   font-size: 26px;
   color: #282828;
@@ -41,16 +54,28 @@
 
 .cardStack {
   font-size: 1.35rem;
-  font-weight: 200;
-  margin: 40px 0 20px 10px;
+  font-weight: 300;
+  margin: 30px 0 20px 10px;
   padding: 0 20px 0 20px;
   white-space: normal;
-  color: whitesmoke;
+  color: rgb(250, 250, 250);
+  background-color: #28282820;
 }
 
-.content ul {
+.ulcontainer {
+  border-top: 1px solid #282828;
+  padding-top: 5px;
+}
+
+.ulcontainer h6 {
+  font-size: 1.4rem;
+  font-weight: 400;
+}
+
+.ulcontainer ul {
   display: flex;
   flex-wrap: wrap;
+  padding-top: 8px;
 }
 .content ul li {
   margin-top: 5px;
