--- a/src/components/Mainsection/Clients/clients.module.css
+++ b/src/components/Mainsection/Clients/clients.module.css
@@ -13,7 +13,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to top, #000000, 40%, transparent);
+  background: linear-gradient(to top, #0f0f0f, 40%, transparent);
   z-index: 98;
 }
 
