--- a/src/components/Mainsection/Contactcard/contactcard.module.css
+++ b/src/components/Mainsection/Contactcard/contactcard.module.css
@@ -34,6 +34,7 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  margin-top: 12px;
 }
 
 .container button svg {
