--- a/src/components/Mainsection/Stack/stack.module.css
+++ b/src/components/Mainsection/Stack/stack.module.css
@@ -6,7 +6,7 @@
   width: 100%;
   overflow: hidden;
   perspective: 10px;
-  background: rgba(29, 31, 32, 0.904)
+  background: #111927
     radial-gradient(rgba(80, 80, 80, 0.622) 10%, transparent 1%);
 
   background-size: 11px 11px;
@@ -56,7 +56,8 @@
   padding: 10px;
   margin: 6px 2px;
   border-radius: 4px;
-  background-color: #363745;
+  background-color: rgba(17, 25, 40, 0.75);
+  border: 1px solid rgba(255, 255, 255, 0.125);
   color: #f1f1f1;
 }
 
