--- a/src/components/Mainsection/Clients/clients.module.css
+++ b/src/components/Mainsection/Clients/clients.module.css
@@ -2,8 +2,6 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  object-fit: cover;
-  object-position: center;
   position: relative;
 }
 
@@ -18,10 +16,11 @@
 }
 
 .img {
+  max-width: none;
+  height: 100%;
+  width: 100%;
   object-fit: cover;
   object-position: center;
-  width: 100%;
-  transform: translateY(-10%);
 }
 
 .container h2 {
@@ -32,4 +31,10 @@
   font-size: x-large;
   font-weight: bold;
   color: #f1f1f1;
+}
+
+@media screen and (max-width: 980px) {
+  .container h2 {
+    font-size: large;
+  }
 }
