--- a/src/components/Mainsection/Time/time.module.css
+++ b/src/components/Mainsection/Time/time.module.css
@@ -2,8 +2,6 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  object-fit: cover;
-  object-position: center;
   position: relative;
 }
 
@@ -17,11 +15,17 @@
   z-index: 98;
 }
 
+.container:hover .img {
+  transform: scale(1.3);
+}
+
 .img {
-  object-fit: cover;
-  object-position: center;
-  width: 100%;
-  transform: translateY(-10%);
+  width: 150%;
+  transform: translateY(-15%);
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  transition: 0.3s ease-in-out;
 }
 
 .container h2 {
