--- a/src/components/Mainsection/Time/time.module.css
+++ b/src/components/Mainsection/Time/time.module.css
@@ -7,8 +7,8 @@
 
 .container div {
   position: absolute;
-  top: 0;
-  left: 0;
+  object-fit: cover;
+  object-position: center;
   width: 100%;
   height: 100%;
   background: linear-gradient(to top, #000000, 40%, transparent);
@@ -16,12 +16,15 @@
 }
 
 .container:hover .img {
-  transform: scale(1.3);
+  transform: scale(1.4);
 }
 
 .img {
-  width: 150%;
-  transform: translateY(-15%);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  max-width: none;
   position: absolute;
   top: 0%;
   left: 0%;
@@ -60,4 +63,10 @@
 .oceania {
   bottom: 10%;
   right: 15%;
+}
+
+@media screen and (max-width: 980px) {
+  .container h2 {
+    font-size: large;
+  }
 }
