--- a/src/components/Mainsection/mainsection.module.css
+++ b/src/components/Mainsection/mainsection.module.css
@@ -74,13 +74,16 @@
 
 @media screen and (min-width: 981px) and (max-width: 1400px) {
   .section {
-    padding: 1rem 4rem;
+    padding: 1rem 3.5rem;
   }
 }
 
 @media screen and (max-width: 980px) {
   .section {
     padding: 1rem 1.5rem;
+    min-width: 100vw;
+    min-height: 100vh;
+    height: 150vh;
   }
 
   .maincontainer {
