--- a/src/components/Mainsection/Stack/stack.module.css
+++ b/src/components/Mainsection/Stack/stack.module.css
@@ -8,7 +8,6 @@
   perspective: 10px;
   background: #111927
     radial-gradient(rgba(80, 80, 80, 0.622) 10%, transparent 1%);
-
   background-size: 11px 11px;
 }
 
@@ -94,5 +93,46 @@
 
   100% {
     transform: translateY(20%);
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .titlecontainer h2 {
+    font-size: x-large;
+    top: 42%;
+    text-shadow: none;
+  }
+
+  .titlecontainer p {
+    position: absolute;
+    width: 200%;
+    font-size: small;
+    top: 32%;
+  }
+  .listcontainer ul li {
+    padding: 8px;
+    margin: 6px 2px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .titlecontainer {
+    padding-left: 12px;
+  }
+
+  .titlecontainer h2 {
+    font-size: large;
+    top: 55%;
+  }
+
+  .titlecontainer p {
+    position: absolute;
+    font-size: small;
+    top: 22%;
+  }
+  .listcontainer ul li {
+    padding: 6px;
+    margin: 3px 2px;
+    font-size: small;
   }
 }
