--- a/src/components/Mainsection/Clients/clients.module.css
+++ b/src/components/Mainsection/Clients/clients.module.css
@@ -11,7 +11,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to top, #0f0f0f, 40%, transparent);
+  background: linear-gradient(to top, #0f0f0f, 40%, transparent),
+    linear-gradient(to bottom, #000000, 20%, transparent);
+
   z-index: 98;
 }
 
