--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -22,8 +22,7 @@
   align-items: center;
   transition: 0.6s ease-in-out;
   padding: 3.5px 45px;
-  background-color: #4f6cff79;
-  background-color: #7aa1d279;
+  background-color: #11192761;
   backdrop-filter: blur(3px);
   z-index: 1000;
   padding-top: 7px;
@@ -40,7 +39,6 @@
   align-items: center;
   transition: 0.6s ease-in-out;
   padding: 3.5px 45px;
-  background-color: #4f6cff79;
   backdrop-filter: blur(3px);
   z-index: 1000;
   padding-top: 10px;
@@ -49,8 +47,7 @@
 .logo {
   position: relative;
   font-weight: 600;
-  color: #6f41ff;
-  color: #e2f8ff;
+  color: #e4e4e4;
   text-decoration: none;
   font-size: 1.7em;
   text-transform: uppercase;
@@ -93,7 +90,7 @@
 .list li a:after {
   content: "";
   position: absolute;
-  background-color: #cc95c0;
+  background-color: #111928;
   height: 3px;
   width: 0;
   left: 0;
@@ -128,7 +125,7 @@
 
 .switch::before {
   position: absolute;
-  content: "☀️";
+  content: "🌙";
 
   left: calc(1.5rem - 1.6rem);
   top: calc(1.5rem - 1.6rem);
@@ -154,7 +151,7 @@
 .switch:checked:before {
   transform: translateX(100%);
   border-color: rgba(32, 151, 243, 1);
-  content: "🌙";
+  content: "☀️";
 }
 
 .checkbtn {
