--- a/src/components/Education/education.module.css
+++ b/src/components/Education/education.module.css
@@ -9,7 +9,7 @@
 
 .container h2 {
   text-align: center;
-  color: darkslategray;
+  color: #f2f2f2;
   font-size: 40px;
   letter-spacing: 4px;
   font-weight: 400;
@@ -21,7 +21,7 @@
   flex-direction: column;
   margin-top: 30px;
   width: 75%;
-  color: #282828;
+  color: #f2f2f2;
   font-size: clamp(20px, 30px, 30px);
   letter-spacing: 3px;
   font-weight: 400;
@@ -52,6 +52,9 @@
 .secundarios > summary {
   list-style: inside;
   cursor: pointer;
+  list-style: none;
+  display: flex;
+  align-items: center;
 }
 
 .secundarios p {
