--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -76,7 +76,6 @@
 
 .button {
   z-index: 999;
-
   background-color: #111927f7;
   border: 1px solid rgba(255, 255, 255, 0.125);
   border-radius: 4px;
@@ -107,10 +106,25 @@
   transform: translateY(0);
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .conttext {
+    justify-content: center;
+  }
+  .alejoback {
+    height: 70vh;
+  }
+
+  .contmain {
+    height: 70vh;
+    width: 85%;
+  }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
+  .conttext {
+    justify-content: flex-end;
+  }
+
   .alejoback {
     height: 70vh;
   }
@@ -127,26 +141,55 @@
     padding-left: 0px;
   }
 
-  .imgcontainer {
-    width: 250px;
-    height: 250px;
-    object-fit: cover;
+  .conth1 {
+    width: 250vw;
+    height: 70vh;
+    overflow-x: visible;
   }
+}
 
-  .mainImage {
-    aspect-ratio: 1 /1;
-    object-fit: cover;
-    clip-path: none;
-    border: 2px solid black;
-    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2);
-    border-radius: 12px;
+@media screen and (max-width: 445px) {
+  .conth1 {
+    width: 300vw;
   }
 
   .h1 {
-    font-size: 1.5em;
+    font-size: 150px;
   }
 
-  .h1 > .span {
-    color: rgb(235, 60, 66);
+  .conttext h2 {
+    font-size: 45px;
+  }
+
+  .conttext h3 {
+    font-size: large;
+  }
+
+  .alejoback {
+    height: 90vh;
+  }
+
+  .button {
+    margin-top: 3%;
+    margin-bottom: 4%;
+    font-size: large;
+    padding: 17px 26px;
+  }
+
+  .contmain {
+    width: 90%;
+    height: 90vh;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding-left: 8%;
+  }
+
+  .conttext {
+    justify-content: flex-start;
+    padding-top: 20%;
+    height: auto;
   }
 }
